# melior

./: Cargo.toml
examples/bril_dialect/: Cargo.toml  build.rs
examples/bril_dialect/src/: lib.rs
examples/bril_dialect/src/dialect/: BrilDialect.td  BrilOpsImpl.cpp
examples/bril_dialect/src/dialect/bril/: BrilDialect.td  BrilOps.td  BrilTypes.td
examples/custom_dialect/: Cargo.toml  build.rs
examples/custom_dialect/src/: lib.rs
examples/custom_dialect/src/dialect/: MathDialect.td
melior-build/: Cargo.toml
melior-build/src/: cpp_gen.rs  error.rs  lib.rs  rust_gen.rs  tblgen.rs
melior-build/tests/: integration.rs
