[workspace]
resolver = "2"
members = ["macro", "melior", "melior-build", "examples/custom_dialect", "examples/bril_dialect"]

[workspace.package]
edition = "2024"
readme = "README.md"
repository = "https://github.com/mlir-rs/melior"
license = "Apache-2.0"
keywords = ["llvm", "mlir"]

[profile.release]
lto = true
